force-app/main/default/objects/sumoapp__AdditionalInfo__c/sumoapp__AdditionalInfo__c.object-meta.xml
<CustomObject>
    <label>SUMO Event</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>SUMO Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>