force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__AdditionalAttendees__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AdditionalAttendees__c</fullName>
    <label>Additional Attendees</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>