force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__AlternateHostName__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AlternateHostName__c</fullName>
    <label>Alternate Host Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>