force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__BookedConfirmationNumber__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__BookedConfirmationNumber__c</fullName>
    <label>Booked Confirmation Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>