force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__BookingDuringTheCourseAllowed__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__BookingDuringTheCourseAllowed__c</fullName>
    <label>Allow Registration During the Course?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BOOK_BEGINING_COURSE</fullName>
                <default>true</default>
                <label>Can Book Before Course Has Started</label>
            </value>
            <value>
                <fullName>BOOK_DURING_COURSE</fullName>
                <label>Can Book After Course Has Started</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>