force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__BufferTimePre__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__BufferTimePre__c</fullName>
    <inlineHelpText>If set, SUMO will create a Pre-Buffer appointment before the scheduled appointment, to give the Host a buffer.</inlineHelpText>
    <label>Pre-Buffer Time (Minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>