force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__CancellationReason__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__CancellationReason__c</fullName>
    <label>Cancellation Reason</label>
    <type>TextArea</type>
</CustomField>