force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__Capacity__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Capacity__c</fullName>
    <inlineHelpText>The total # of seats or people allowed to register for this event, once met, the event is considered SOLD OUT.  If blank, then capacity is unlimited.</inlineHelpText>
    <label>Capacity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>