force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__Category__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If you would like people to self-register for this Event, you must choose a category to effectively tie this Event to the Online Scheduler.</inlineHelpText>
    <label>Category</label>
    <referenceTo>sumoapp__Category__c</referenceTo>
    <relationshipLabel>Category Activities</relationshipLabel>
    <relationshipName>CategoryActivities2</relationshipName>
    <type>Lookup</type>
</CustomField>