force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__ClientLink__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ClientLink__c</fullName>
    <label>Client Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>