force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__ClientLinkTextArea__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ClientLinkTextArea__c</fullName>
    <label>Client Link</label>
    <type>TextArea</type>
</CustomField>