force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__Color__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Color__c</fullName>
    <defaultValue>CASE($RecordType.DeveloperName, &quot;Event&quot;, &quot;#5679C0&quot;, &quot;Course&quot;, &quot;#5679C0&quot;, &quot;Appointment&quot;, &quot;#EEEEEE&quot;, &quot;#EEEEEE&quot;)</defaultValue>
    <description>Html Color Code</description>
    <label>Color</label>
    <length>32</length>
    <type>Text</type>
</CustomField>