force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__DatetimeSectionDescription__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__DatetimeSectionDescription__c</fullName>
    <label>Datetime Section Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>