force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__Duration__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Duration__c</fullName>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
                <label>15 Minutes</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>30 Minutes</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>45 Minutes</label>
            </value>
            <value>
                <fullName>60</fullName>
                <default>true</default>
                <label>1 hour</label>
            </value>
            <value>
                <fullName>90</fullName>
                <label>1.5 hour</label>
            </value>
            <value>
                <fullName>120</fullName>
                <label>2 hours</label>
            </value>
            <value>
                <fullName>150</fullName>
                <label>2.5 hours</label>
            </value>
            <value>
                <fullName>180</fullName>
                <label>3 hours</label>
            </value>
            <value>
                <fullName>210</fullName>
                <label>3.5 hours</label>
            </value>
            <value>
                <fullName>240</fullName>
                <label>4 hours</label>
            </value>
            <value>
                <fullName>270</fullName>
                <label>4.5 hours</label>
            </value>
            <value>
                <fullName>300</fullName>
                <label>5 hours</label>
            </value>
            <value>
                <fullName>330</fullName>
                <label>5.5 hours</label>
            </value>
            <value>
                <fullName>360</fullName>
                <label>6 hours</label>
            </value>
            <value>
                <fullName>390</fullName>
                <label>6.5 hours</label>
            </value>
            <value>
                <fullName>420</fullName>
                <label>7 hours</label>
            </value>
            <value>
                <fullName>450</fullName>
                <label>7.5 hours</label>
            </value>
            <value>
                <fullName>480</fullName>
                <label>8 hours</label>
            </value>
            <value>
                <fullName>10</fullName>
                <isActive>false</isActive>
                <label>10</label>
            </value>
            <value>
                <fullName>20</fullName>
                <isActive>false</isActive>
                <label>20</label>
            </value>
            <value>
                <fullName>5</fullName>
                <isActive>false</isActive>
                <label>5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>