force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__EventColor__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EventColor__c</fullName>
    <label>Event Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>