force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__ExternalNotes__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ExternalNotes__c</fullName>
    <label>External Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>