force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__FrequencyNumber__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__FrequencyNumber__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Frequency Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>