force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__FrequencyType__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__FrequencyType__c</fullName>
    <label>Frequency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAILY</fullName>
                <default>true</default>
                <label>Daily</label>
            </value>
            <value>
                <fullName>WEEKLY</fullName>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>MONTHLY</fullName>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>SPECIFIC_DATES</fullName>
                <label>Specific Dates</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>