force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__IncludeVideoConferenceDetails__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IncludeVideoConferenceDetails__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include Video Conference Details</label>
    <type>Checkbox</type>
</CustomField>