force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__Invite__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Invite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invite</label>
    <referenceTo>sumoapp__Invite__c</referenceTo>
    <relationshipLabel>Invite Infos</relationshipLabel>
    <relationshipName>InviteInfos</relationshipName>
    <type>Lookup</type>
</CustomField>