force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__IsPrivateEvent__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IsPrivateEvent__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Private Event</label>
    <type>Checkbox</type>
</CustomField>