force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__IsReminderSent__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IsReminderSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>