force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__IsSingleChange__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IsSingleChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Single Event Change</label>
    <type>Checkbox</type>
</CustomField>