force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__IsWaitlistManagment__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IsWaitlistManagment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If enabled, once an event is at capacity, people can join the Waitlist, which will email everyone once-a-day on the Waitlist announcing X openings (where participants declined), and the first to register get the spots.</inlineHelpText>
    <label>Is Waitlist Managment</label>
    <type>Checkbox</type>
</CustomField>