force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__MaxBookings__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__MaxBookings__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>This is the total number of spaces a single person can reserve at once.  For example, some events allow one person to book 4 people for a table without requiring each person to register.</inlineHelpText>
    <label>Max Bookings</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>