force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__MaximumAdvanceTimeToRegister__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__MaximumAdvanceTimeToRegister__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Maximum Advance Time To Register</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>