force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__MaximumAdvanceTimeToRegisterInterval__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__MaximumAdvanceTimeToRegisterInterval__c</fullName>
    <defaultValue>&quot;DAYS&quot;</defaultValue>
    <label>Max Advance Time To Register Interval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sumoapp__TimePeriods</valueSetName>
    </valueSet>
</CustomField>