force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__MinimumAdvanceTimeToCancel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__MinimumAdvanceTimeToCancel__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Minimum Advance Time To Cancel</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>