force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__Note__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Note</label>
    <referenceTo>sumoapp__Note__c</referenceTo>
    <relationshipLabel>Note Infos</relationshipLabel>
    <relationshipName>NoteInfos</relationshipName>
    <type>Lookup</type>
</CustomField>