force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__NoteForAdditionalAttendees__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__NoteForAdditionalAttendees__c</fullName>
    <label>Note For Additional Attendees</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>