force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__Organizer__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Organizer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organizer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Organizer</relationshipName>
    <type>Lookup</type>
</CustomField>