force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__Parent__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>sumoapp__AdditionalInfo__c</referenceTo>
    <relationshipLabel>Child Events</relationshipLabel>
    <relationshipName>ChildEvents</relationshipName>
    <type>Lookup</type>
</CustomField>