force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__PlaceId__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__PlaceId__c</fullName>
    <description>Google Place Id corresponding to event location</description>
    <label>Place Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>