force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__Price__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Price__c</fullName>
    <label>Price</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>