force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__Process__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduling Process</label>
    <referenceTo>sumoapp__Process__c</referenceTo>
    <relationshipLabel>Process Infos</relationshipLabel>
    <relationshipName>ProcessInfos</relationshipName>
    <type>Lookup</type>
</CustomField>