force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__RecurringCount__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__RecurringCount__c</fullName>
    <label>Recurring Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>