force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__RecurringEndDate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__RecurringEndDate__c</fullName>
    <label>Recurring End Date</label>
    <type>Date</type>
</CustomField>