force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__RecurringWeekDay__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__RecurringWeekDay__c</fullName>
    <label>Recurring Week Day</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Su</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>M</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Tu</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>W</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Th</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Fr</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Sa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>