force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__RegisteredAttendeeCount__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__RegisteredAttendeeCount__c</fullName>
    <label>Registered Attendee Count</label>
    <summaryFilterItems>
        <field>sumoapp__Attendee__c.sumoapp__Status__c</field>
        <operation>notEqual</operation>
        <value>CANCELED, WAITLISTED, DRAFT, DECLINED</value>
    </summaryFilterItems>
    <summaryForeignKey>sumoapp__Attendee__c.sumoapp__SumoEvent__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>