force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__RescheduleLink__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__RescheduleLink__c</fullName>
    <label>Cancel/Reschedule Link</label>
    <type>Url</type>
</CustomField>