force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__Service__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>sumoapp__Service__c</referenceTo>
    <relationshipLabel>Service Infos</relationshipLabel>
    <relationshipName>ServiceInfos</relationshipName>
    <type>Lookup</type>
</CustomField>