force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__ShowInternalEmails__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ShowInternalEmails__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Internal Emails</label>
    <type>Checkbox</type>
</CustomField>