force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__StartInterval__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__StartInterval__c</fullName>
    <label>Appointment Start Time Interval (GMT)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>