force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__Status__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOOKED</fullName>
                <default>true</default>
                <label>Booked</label>
            </value>
            <value>
                <fullName>CANCELED</fullName>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>RESCHEDULED</fullName>
                <label>Rescheduled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>