force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__TotalRegisteredAttendee__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__TotalRegisteredAttendee__c</fullName>
    <label>Total Registered Attendee</label>
    <summarizedField>sumoapp__Attendee__c.sumoapp__NumberOfSeats__c</summarizedField>
    <summaryFilterItems>
        <field>sumoapp__Attendee__c.sumoapp__Status__c</field>
        <operation>notEqual</operation>
        <value>CANCELED, WAITLISTED, DRAFT, DECLINED</value>
    </summaryFilterItems>
    <summaryForeignKey>sumoapp__Attendee__c.sumoapp__SumoEvent__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>