force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__TotalWaitlistedAttendee__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__TotalWaitlistedAttendee__c</fullName>
    <label>Total Waitlisted Attendee</label>
    <summarizedField>sumoapp__Attendee__c.sumoapp__NumberOfSeats__c</summarizedField>
    <summaryFilterItems>
        <field>sumoapp__Attendee__c.sumoapp__Status__c</field>
        <operation>equals</operation>
        <value>WAITLISTED</value>
    </summaryFilterItems>
    <summaryForeignKey>sumoapp__Attendee__c.sumoapp__SumoEvent__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>