force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__VirtualEventDetails__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__VirtualEventDetails__c</fullName>
    <label>Virtual Event Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>