force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__VirtualEventId__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__VirtualEventId__c</fullName>
    <description>Id of a Web Conference</description>
    <label>Virtual Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>