force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__VirtualEventType__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__VirtualEventType__c</fullName>
    <label>Virtual Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sumoapp__WebConferenceTypes</valueSetName>
    </valueSet>
</CustomField>