force-app/main/default/objects/sumoapp__AdditionalInfo__c/fields/sumoapp__WaitlistedAttendeeCount__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__WaitlistedAttendeeCount__c</fullName>
    <label>Waitlisted Attendee Count</label>
    <summaryFilterItems>
        <field>sumoapp__Attendee__c.sumoapp__Status__c</field>
        <operation>equals</operation>
        <value>Waitlisted</value>
    </summaryFilterItems>
    <summaryForeignKey>sumoapp__Attendee__c.sumoapp__SumoEvent__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>