force-app/main/default/objects/sumoapp__AdditionalInfo__c/recordTypes/sumoapp__Appointment.recordType-meta.xml
<RecordType>
    <fullName>sumoapp__Appointment</fullName>
    <active>true</active>
    <label>Appointment</label>
</RecordType>