force-app/main/default/objects/sumoapp__AdditionalInfo__c/recordTypes/sumoapp__Course.recordType-meta.xml
<RecordType>
    <fullName>sumoapp__Course</fullName>
    <active>true</active>
    <label>Course</label>
</RecordType>