force-app/main/default/objects/sumoapp__AdditionalInfo__c/recordTypes/sumoapp__Event.recordType-meta.xml
<RecordType>
    <fullName>sumoapp__Event</fullName>
    <active>true</active>
    <label>Event</label>
</RecordType>