force-app/main/default/objects/sumoapp__AdditionalInfo__c/recordTypes/sumoapp__EventClass.recordType-meta.xml
<RecordType>
    <fullName>sumoapp__EventClass</fullName>
    <active>true</active>
    <label>Event Class</label>
</RecordType>